@@ -142,7 +142,7 @@ char *operatorshortnames[] = {"<", "<=", ">", ">=", "=", "!=", "<>"};
 char *servicetypes[] = {"Filesystem", "Directory", "File", "Process", "Remote Host", "System", "Fifo", "Program", "Network"};
 char *pathnames[] = {"Path", "Path", "Path", "Pid file", "Path", "", "Path"};
 char *icmpnames[] = {"Reply", "", "", "Destination Unreachable", "Source Quench", "Redirect", "", "", "Ping", "", "", "Time Exceeded", "Parameter Problem", "Timestamp Request", "Timestamp Reply", "Information Request", "Information Reply", "Address Mask Request", "Address Mask Reply"};
-char *sslnames[] = {"auto", "v2", "v3", "tlsv1", "tlsv1.1", "tlsv1.2"};
+char *sslnames[] = {"auto", "v2", "v3", "tlsv1", "tlsv1.1", "tlsv1.2", "tlsv1.3"};
 char *socketnames[] = {"unix", "IP", "IPv4", "IPv6"};
 char *timestampnames[] = {"modify/change time", "access time", "change time", "modify time"};
 char *httpmethod[] = {"", "HEAD", "GET"};
