@@ -340,7 +340,7 @@ static void _setSSLOptions(SslOptions_T options);
 %token GROUP REQUEST DEPENDS BASEDIR SLOT EVENTQUEUE SECRET HOSTHEADER
 %token UID EUID GID MMONIT INSTANCE USERNAME PASSWORD
 %token TIME ATIME CTIME MTIME CHANGED MILLISECOND SECOND MINUTE HOUR DAY MONTH
-%token SSLAUTO SSLV2 SSLV3 TLSV1 TLSV11 TLSV12 CERTMD5 AUTO
+%token SSLAUTO SSLV2 SSLV3 TLSV1 TLSV11 TLSV12 TLSV13 CERTMD5 AUTO
 %token BYTE KILOBYTE MEGABYTE GIGABYTE
 %token INODE SPACE TFREE PERMISSION SIZE MATCH NOT IGNORE ACTION UPTIME
 %token EXEC UNMONITOR PING PING4 PING6 ICMP ICMPECHO NONEXIST EXIST INVALID DATA RECOVERED PASSED SUCCEEDED
@@ -904,6 +904,15 @@ sslversion      : SSLV2 {
                         sslset.flags = SSL_Enabled;
                         sslset.version = SSL_TLSV12;
                 }
+                | TLSV13
+                {
+#ifndef HAVE_TLSV1_3
+                        yyerror("Your SSL Library does not support TLS version 1.3");
+#endif
+                        sslset.flags = SSL_Enabled;
+                        sslset.version = SSL_TLSV13;
+                }
+
                 | SSLAUTO {
                         sslset.flags = SSL_Enabled;
                         sslset.version = SSL_Auto;
